# mecaps

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
cmake/: dependencies.cmake
cmake/dependencies/: curl.cmake  doctest.cmake  fakeit.cmake  fff.cmake  kdutils.cmake  mosquitto.cmake  slint.cmake  spdlog.cmake
demo/: CMakeLists.txt
demo/src/: main.cpp
demo/src/application_engine/: CMakeLists.txt  application_engine.cpp  application_engine.h  tst_application_engine.cpp
demo/ui/: app_window.slint
demo/ui/pages/: ftp_page.slint  mqtt_page.slint  page.slint
src/: main.cpp
src/kdgui_slint_integration/: CMakeLists.txt  kdgui_slint_integration.cpp  kdgui_slint_integration.h  kdgui_slint_keys.h  platform.h  slint_wrapper_window.cpp  slint_wrapper_window.h  tst_kdgui_slint_integration.cpp  window_adapter.cpp  window_adapter.h
src/mecaps/: abstract_transfer_handle.cpp  abstract_transfer_handle.h  application_engine.cpp  application_engine.h  ftp_transfer_handle.cpp  ftp_transfer_handle.h  http_transfer_handle.cpp  http_transfer_handle.h  kdgui_slint_keys.h  mecaps.cpp  mecaps.h  mqtt.cpp  mqtt.h  network_access_manager.cpp  platform.h  slint_wrapper_window.cpp  slint_wrapper_window.h  window_adapter.cpp  window_adapter.h
src/mqtt/: CMakeLists.txt  mosquitto_wrapper.h  mqtt.cpp  mqtt.h  tst_mqtt.cpp
src/network_access_manager/: CMakeLists.txt  abstract_transfer_handle.cpp  abstract_transfer_handle.h  ftp_transfer_handle.h  http_transfer_handle.cpp  http_transfer_handle.h  network_access_manager.cpp  network_access_manager.h  tst_libcurl_stub.h  tst_network_access_manager.cpp
ui/: app_window.slint  appwindow.slint
ui/pages/: counter_page.slint  ftp_page.slint  http_page.slint  mqtt_page.slint  page.slint  pages.slint
